# biapol-utilities

./: .gitignore  LICENSE  README.md  genindex.html  index.html  main.py  objects.inv  search.html  searchindex.js  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_doc.yml  build_doc_sphinx.yml  compile_docs.yml  sphinx_build.yml
_include/: API_reference.html  Contribute.html  Examples.html
_sources/: index.rst.txt
_sources/_include/: API_reference.rst.txt
_static/css/: hatnotes.css
biapol_utilities/: __init__.py
biapol_utilities/data/: __init__.py  _data.py  hourglass.tif
biapol_utilities/label/: __init__.py  _compare_labels.py  _filter_similarity_matrix.py  _intersection_over_union.py  _jaccard_index.py  _label_overlap_matrix.py  _match_labels.py  _matching_algorithms.py
biapol_utilities/measure/: __init__.py  _label_confusion_matrix.py  _labelwise_jaccard_score.py
biapol_utilities/tests/: test_intersection_over_union.py  test_labelwise_jaccard.py  test_match_labels.py
biapol_utilities/transform/: __init__.py  _higher_dimensions.py  _warp_polar_5D.py
biapol_utilities/utilities/: __init__.py  (+2 more)
biapolutils/: __init__.py
doc/: conf.py  index.rst
docs/: build_env.yml  build_environment.yml  conf.py
license_thirdparty/: license_pyclesperanto_prototype
tests/: test_data.py  test_dummy.py  test_intersection_over_union.py  test_jaccard_index.py  test_jaccard_score.py  test_label_overlap_matrix.py  test_match_labels.py  test_match_labels_stack.py  test_process_higher_dimension.py  test_similarity_matrix_filters.py
(+95 files in other folders)
