[metadata]
name = biapol-utilities
version = 0.0.1
author = Johannes Müller
author_email = johannes_richard.mueller@tu-dresden.de

license = BSD-3-Clause
description = Collection of bio-image analysis functions of the biapol group @ TU Dresden.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BiAPoL/biapol-utilities.git
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    numpy
    scikit-image
    scikit-learn
    pandas
    matplotlib
    pandoc
    nbsphinx

